fixes css overflow

--- a/xkedule/src/styles/daily.scss
+++ b/xkedule/src/styles/daily.scss
@@ -68,3 +68,10 @@
         }
     }
 }
+.overflow_text{
+    width : 100%;
+    overflow:hidden;
+    display:inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
